--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -4,3 +4,19 @@
 .list-categories .c-tags{
     display: inline;
 }
+.card-post{
+    padding: 5px;
+    border: solid 1px #CCC;
+    border-radius: 3px;
+}
+.comment-item{
+    border: solid 1px gray;
+    margin: 10px 0;
+    padding: 5px;
+    box-sizing: border-box;
+    list-style: none;
+}
+
+textarea{
+    margin-bottom: 10px;
+}
