--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,3 +20,30 @@
 textarea{
     margin-bottom: 10px;
 }
+.errorMessage{
+    display: none;
+}
+.errorMessage.show{
+    display: block;
+}
+
+.overlay-loading{
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+}
+.overlay-loading-container{
+    width: 200px;
+    height: 50px;
+    margin: 0 auto;
+    position: relative;
+    top: 50%;
+    background: #FFF;
+    transform: translateY(-50%);
+    border-radius: 5px;
+    text-align: center;
+    line-height: 50px;
+}
