Feat: add behaviors for NEW postr new post

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -7,7 +7,8 @@
 .card-post{
     padding: 5px;
     border: solid 1px #CCC;
-    border-radius: 3px;
+    border-radius: 3px;    
+    margin-bottom: 10px;
 }
 .comment-item{
     border: solid 1px gray;
